[tool.poetry]
name = "xo2"
version = "0.1.0"
description = "EAF-based 3D engine"
authors = ["Pavel Kulyov <kulyov.pavel@gmail.com>"]
license = "MIT"
readme = "README.rst"

repository = "https://github.com/pkulev/xo2"
homepage = "https://github.com/pkulev/xo2"

keywords = ["pygame", "sdl2", "application", "framework"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
eaf = "^0.2.2"
pygame= "^2.0"
python = "^3.7"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.761"
pylint = "^2.4.4"
pytest = "^5.3.5"
pytest-coverage = "^0.0"
pytest-mypy = "^0.6.0"
pytest-pylint = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
